# mono-paris-agent

./: README.md
backend/: .gitignore  Dockerfile  main.py  makefile  pyproject.toml  test_agent_designer.py  test_job_agent.py  test_services.py  testing.py
backend/server/: __init__.py  app.py  routes.py  settings.py  tracing.py
backend/server/agents/: __init__.py  agent_designer.py  agent_evaluator.py  complete.py  job_to_tasks.py  job_to_tasks_agent.py  message_logger.py  orchestrator.py  subtask_agent.py  test_design.py
backend/server/db/: client.py  models.py  queries.py
backend/server/services/: get_composio_tools.py  perplexity.py  search.py
database/: 01_tables.sql  Readme.md
frontend/: .env.example  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: actions.ts  dashboard.tsx  globals.css  layout.tsx  page.tsx
frontend/app/api/claude/: route.ts
frontend/app/api/sample/: route.ts
frontend/app/auth/callback/: route.ts
frontend/app/components/: dashboard.tsx
frontend/app/report/: page.tsx
frontend/app/report/[reportId]/: page.tsx
frontend/app/report/[reportId]/subtask/[subTaskId]/: page.tsx  taskAgentChat.tsx
frontend/app/report/[reportId]/task-agent/[taskAgentId]/: page.tsx  taskAgentChat.tsx
frontend/components/: fileUpload.tsx
frontend/components/navbar/: index.tsx
frontend/components/ui/: progress.tsx
frontend/lib/: database.types.ts  storage.ts  types.ts
frontend/utils/supabase/: middleware.ts
